changes to tolist